--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
     <head>
         <title>Raphael Play</title>
         <script type="text/javascript" src="app-build.js"></script>
-     
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+
+        <div id="app">
+        </div>
+
     </body>
 </html>
