--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <body>
 
         <div id="app">
+            <div id="paper">
+                </div>
+                <div id="legend">
+                    <h2>Trucks</h2>
+                    </div>
         </div>
 
     </body>
