--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
 
         <div id="app">
+            <span id="pause">Pause</span><span id="play">Play</span>
+            <div id="timer"></div>
             <div id="paper">
                 </div>
                 <div id="legend">
