too much changes to remember

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 
         <div id="app">
-            <span id="pause">Pause</span><span id="play">Play</span>
+            <span id="pause">Pause</span> <span id="play">Play</span> <span id="skip">Skip 50</span>
             <div id="timer"></div>
             <div id="paper">
                 </div>
