--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="paper">
                 </div>
                 <div id="legend">
-                    <h2>Trucks</h2>
+                    <div id="truck-info"></div>
                     </div>
         </div>
 
