nr timeslots and scale

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Raphael Play</title>
+        <title>DTAS Simulation</title>
         <script type="text/javascript" src="app-build.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
