swap push pull and log

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <body>
 
         <div id="app">
-            <span id="pause">Pause</span> <span id="play">Play</span> <span id="skip">Skip 50</span>
             <div id="timer"></div>
             <div id="paper">
                 </div>
+                        <div id="log">
+            </div>
                 <div id="legend">
                     <div id="truck-info"></div>
                     </div>
         </div>
+
 
     </body>
 </html>
