--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>DTAS Simulation</title>
         <script type="text/javascript" src="app-build.js"></script>
+        <link rel="stylesheet" type="text/css" href="materialize.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -11,10 +12,14 @@
             <div id="paper">
                 </div>
                         <div id="log">
+          
             </div>
+            <div id="kpis">
+                <h3> KPIs</h3>
+                </div>
                 <div id="legend">
                     <div id="truck-info"></div>
-                    </div>
+                </div>
         </div>
 
 
